--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <linK href="/layout.css" rel="stylesheet">
+    <link href="/layout.css" rel="stylesheet">
 </head>
 <body>
     <div th:fragment="navbar">
