--- a/src/main/resources/templates/pending.html
+++ b/src/main/resources/templates/pending.html
@@ -6,30 +6,29 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-5" layout:fragment="content">
-    <div class="row row-cols-2 g-4" th:if="${!requests.isEmpty()}">
-      <div class="col" th:each="request:${requests}" th:if="${request.handled == false}">
-        <div class="card card-body" th:if="${request.handled == false}">
-          <h3> Request from
-            <span th:text="${request.userName}"></span>
-          </h3>
+    <div class="container mt-5" layout:fragment="content">
+        <div class="row row-cols-2 g-4" th:if="${!requests.isEmpty()}">
+            <div class="col" th:each="request:${requests}" th:if="${request.handled == false}">
+                <div class="card card-body" th:if="${request.handled == false}">
+                    <h3> Request from
+                        <span th:text="${request.userName}"></span>
+                    </h3>
 
-          <p> Course:
-            <span th:text="${request.courseName}"></span>
-          </p>
+                    <p> Course:
+                        <span th:text="${request.courseName}"></span>
+                    </p>
 
-          <p>
-            <span th:text="${request.commentary}"></span>
-          </p>
-
-          <p>
-            <span th:text="${request.phone}" style="font-style: italic"></span>
-            <a th:href="@{/request/{id}(id=${request.id})}">Details</a>
-            <a th:if="${!request.handled}" th:href="@{/handle_request/{id}(id=${request.id})}">Handle</a>
-          </p>
+                    <p>
+                        <span th:text="${request.commentary}"></span>
+                    </p>
+                    <p> Phone number:
+                        <strong><span th:text="${request.phone}"></span></strong>
+                        <a th:href="@{/request/{id}(id=${request.id})}">Details</a>
+                        <a th:if="${!request.handled}" th:href="@{/handle_request/{id}(id=${request.id})}">Handle</a>
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </body>
 </html>
