--- a/src/main/resources/templates/handled.html
+++ b/src/main/resources/templates/handled.html
@@ -15,7 +15,7 @@
                     </h3>
 
                     <p> Course:
-                        <span th:text="${request.courseName}"></span>
+                        <span th:text="${request.course.name} + ' ' + ${request.course.description} + ' - ' + ${request.course.price} + '$'"></span>
                     </p>
 
                     <p>
